--- a/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
+++ b/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
@@ -681,7 +681,116 @@ Show latest update changelog §显示最新的更新日志
 Participate in betas §参与测试
 Trusted mode->http must be enabled to use this. §必须启用 信任模式 -> http 才能使用这个.
 Translate into §翻译成
-Translate chat §翻译战局聊天
+Translate chat §翻译聊天到
 Translation §翻译
 Translate what is not §不翻译
 Translate your messages §翻译你的聊天信息
+南非荷兰语 §
+阿尔巴尼亚语 §
+阿姆哈拉语 §
+阿拉伯语 §
+亚美尼亚 §
+阿塞拜疆语 §
+巴斯克语 §
+白俄罗斯语 §
+孟加拉语 §
+波斯尼亚语 §
+保加利亚语 §
+加泰罗尼亚语 §
+宿务语 §
+简体中文 §
+繁体中文 §
+科西嘉岛语 §
+克罗地亚语 §
+捷克语 §
+丹麦语 §
+荷兰语 §
+英语 §
+世界语 §
+爱沙尼亚语 §
+芬兰语 §
+法语 §
+弗里斯兰语 §
+加利西亚语 §
+格鲁吉亚语 §
+德语 §
+希腊语 §
+古吉拉特语 §
+海地克里奥尔语 §
+豪萨语 §
+夏威夷语 §
+希伯来语 §
+印地语 §
+苗族语 §
+匈牙利语 §
+冰岛语 §
+伊博语 §
+印度尼西亚语 §
+爱尔兰语 §
+意大利语 §
+日语 §
+爪哇语 §
+卡纳达语 §
+哈萨克语 §
+高棉语 §
+卢旺达语 §
+韩语 §
+库尔德语 §
+吉尔吉斯斯坦语 §
+老挝语 §
+拉丁语 §
+拉脱维亚语 §
+立陶宛 §
+卢森堡 §
+马其顿 §
+马达加斯加语 §
+马来语 §
+马拉雅拉姆语 §
+马耳他语 §
+毛利语 §
+马拉地语 §
+蒙古语 §
+缅甸语 §
+尼泊尔语 §
+挪威语 §
+奇切瓦 §
+奥里亚语 §
+普什图语 §
+波斯语 §
+抛光语 §
+葡萄牙语 §
+旁遮普语 §
+罗马尼亚语 §
+俄语 §
+萨摩亚语 §
+苏格兰盖尔语 §
+塞尔维亚语 §
+塞索托语 §
+绍纳语 §
+信德语 §
+僧伽罗语 §
+斯洛伐克语 §
+斯洛文尼亚语 §
+索马里语 §
+西班牙语 §
+巽他语 §
+斯瓦希里语 §
+瑞典语 §
+菲律宾语 §
+塔吉克斯坦语 §
+泰米尔语 §
+鞑靼语 §
+泰卢固语 §
+泰语语 §
+土耳其语 §
+土库曼语 §
+乌克兰语 §
+乌尔都语 §
+维吾尔语 §
+乌兹别克语 §
+越南语 §
+威尔士语 §
+科萨语 §
+意第绪语 §
+约鲁巴语 §
+祖鲁语 §
