--- a/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
+++ b/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
@@ -685,112 +685,112 @@ Translate chat §翻译聊天到
 Translation §翻译
 Translate what is not §不翻译
 Translate your messages §翻译你的聊天信息
-南非荷兰语 §
-阿尔巴尼亚语 §
-阿姆哈拉语 §
-阿拉伯语 §
-亚美尼亚 §
-阿塞拜疆语 §
-巴斯克语 §
-白俄罗斯语 §
-孟加拉语 §
-波斯尼亚语 §
-保加利亚语 §
-加泰罗尼亚语 §
-宿务语 §
-简体中文 §
-繁体中文 §
-科西嘉岛语 §
-克罗地亚语 §
-捷克语 §
-丹麦语 §
-荷兰语 §
-英语 §
-世界语 §
-爱沙尼亚语 §
-芬兰语 §
-法语 §
-弗里斯兰语 §
-加利西亚语 §
-格鲁吉亚语 §
-德语 §
-希腊语 §
-古吉拉特语 §
-海地克里奥尔语 §
-豪萨语 §
-夏威夷语 §
-希伯来语 §
-印地语 §
-苗族语 §
-匈牙利语 §
-冰岛语 §
-伊博语 §
-印度尼西亚语 §
-爱尔兰语 §
-意大利语 §
-日语 §
-爪哇语 §
-卡纳达语 §
-哈萨克语 §
-高棉语 §
-卢旺达语 §
-韩语 §
-库尔德语 §
-吉尔吉斯斯坦语 §
-老挝语 §
-拉丁语 §
-拉脱维亚语 §
-立陶宛 §
-卢森堡 §
-马其顿 §
-马达加斯加语 §
-马来语 §
-马拉雅拉姆语 §
-马耳他语 §
-毛利语 §
-马拉地语 §
-蒙古语 §
-缅甸语 §
-尼泊尔语 §
-挪威语 §
-奇切瓦 §
-奥里亚语 §
-普什图语 §
-波斯语 §
-抛光语 §
-葡萄牙语 §
-旁遮普语 §
-罗马尼亚语 §
-俄语 §
-萨摩亚语 §
-苏格兰盖尔语 §
-塞尔维亚语 §
-塞索托语 §
-绍纳语 §
-信德语 §
-僧伽罗语 §
-斯洛伐克语 §
-斯洛文尼亚语 §
-索马里语 §
-西班牙语 §
-巽他语 §
-斯瓦希里语 §
-瑞典语 §
-菲律宾语 §
-塔吉克斯坦语 §
-泰米尔语 §
-鞑靼语 §
-泰卢固语 §
-泰语语 §
-土耳其语 §
-土库曼语 §
-乌克兰语 §
-乌尔都语 §
-维吾尔语 §
-乌兹别克语 §
-越南语 §
-威尔士语 §
-科萨语 §
-意第绪语 §
-约鲁巴语 §
-祖鲁语 §
+Afrikaans §南非荷兰语
+Albanian §阿尔巴尼亚语
+Amharic §阿姆哈拉语
+Arabic §阿拉伯语
+Armenian §亚美尼亚
+Azerbaijani §阿塞拜疆语
+Basque §巴斯克语
+Belarusian §白俄罗斯语
+Bengali §孟加拉语
+Bosnian §波斯尼亚语
+Bulgarian §保加利亚语
+Catalan §加泰罗尼亚语
+Cebuano § 宿务语
+Chinese (Simplified) §简体中文
+Chinese (Traditional) §繁体中文
+Corsican §科西嘉岛语
+Croatian §克罗地亚语
+Czech §捷克语
+Danish §丹麦语
+Dutch §荷兰语
+English §英语
+Esperanto §世界语
+Estonian §爱沙尼亚语
+Finnish §芬兰语
+French §法语
+Frisian §弗里斯兰语
+Galician §加利西亚语
+Georgian §格鲁吉亚语
+German §德语
+Greek §希腊语
+Gujarati §古吉拉特语
+Haitian Creole §海地克里奥尔语
+Hausa §豪萨语
+Hawaiian § 夏威夷语
+Hebrew §希伯来语
+Hindi §印地语
+Hmong § 苗族语
+Hungarian §匈牙利语
+Icelandic §冰岛语
+Igbo §伊博语
+Indonesian §印度尼西亚语
+Irish §爱尔兰语
+Italian §意大利语
+Japanese §日语
+Javanese §爪哇语
+Kannada §卡纳达语
+Kazakh §哈萨克语
+Khmer §高棉语
+Kinyarwanda §卢旺达语
+Korean §韩语
+Kurdish §库尔德语
+Kyrgyz §吉尔吉斯斯坦语
+Lao §老挝语
+Latin §拉丁语
+Latvian §拉脱维亚语
+Lithuanian §立陶宛
+Luxembourgish §卢森堡
+Macedonian §马其顿
+Malagasy §马达加斯加语
+Malay §马来语
+Malayalam §马拉雅拉姆语
+Maltese §马耳他语
+Maori §毛利语
+Marathi §马拉地语
+Mongolian §蒙古语
+Myanmar (Burmese) §缅甸语
+Nepali §尼泊尔语
+Norwegian §挪威语
+Nyanja (Chichewa) §奇切瓦
+Odia (Oriya) §奥里亚语
+Pashto §普什图语
+Persian §波斯语
+Polish §抛光语
+Portuguese (Portugal, Brazil) §葡萄牙语
+Punjabi §旁遮普语
+Romanian §罗马尼亚语
+Russian §俄语
+Samoan §萨摩亚语
+Scots Gaelic §苏格兰盖尔语
+Serbian §塞尔维亚语
+Sesotho §塞索托语
+Shona §绍纳语
+Sindhi §信德语
+Sinhala (Sinhalese) §僧伽罗语
+Slovak §斯洛伐克语
+Slovenian §斯洛文尼亚语
+Somali §索马里语
+Spanish §西班牙语
+Sundanese §巽他语
+Swahili §斯瓦希里语
+Swedish §瑞典语
+Tagalog (Filipino) §菲律宾语
+Tajik §塔吉克斯坦语
+Tamil §泰米尔语
+Tatar §鞑靼语
+Telugu §泰卢固语
+Thai §泰语语
+Turkish §土耳其语
+Turkmen §土库曼语
+Ukrainian §乌克兰语
+Urdu §乌尔都语
+Uyghur §维吾尔语
+Uzbek §乌兹别克语
+Vietnamese §越南语
+Welsh §威尔士语
+Xhosa §科萨语
+Yiddish §意第绪语
+Yoruba §约鲁巴语
+Zulu §祖鲁语
