--- a/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
+++ b/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
@@ -313,7 +313,7 @@ Kill player §击杀玩家
 Only friends can use commands §仅对好友生效
 Teleport to §传送到
 This player can't use chat commands §禁用聊天命令
-Send command list every § §每隔一段时间发送命令列表
+Send command list every §每隔一段时间发送命令列表
 Cage player §套笼子
 Kick §踢出战局
 Send attack chopper §派出攻击直升机
@@ -669,12 +669,11 @@ Num of entities spawned §已生成的实体数量
 Save only mission entities §仅保存任务实体
 Wait until the previous map is done spawning. §正在等待上一张地图完成生成.
 You have the latest version of Kek's menu. §当前为最新版本的Kek菜单.
-There's a new version of Kek's menu, starting update... §检测到有新版本的 Kek 菜单,开始更新...
 Update successfully installed. §更新已安装成功.
 Update failed. No files are changed. §更新失败了. 没有文件被更改.
 Failed to check what the latest version of the script is. §检查脚本的最新版本失败.
 files downloaded §文件已下载.
-Enable trusted mode->http for automatic updates. §启用 信任模式 -> http 以进行自动更新.
+You must enable trusted mode->http to check for updates. §你必须启用 信任模式 -> http 才能检查更新.
 Turn off debug mode to use auto-updater. §关闭 调试模式 以使用自动更新.
 Press space to remove this message. §按 空格 移除此信息.
 Show latest update changelog §显示最新的更新日志
@@ -698,8 +697,8 @@ Bosnian §波斯尼亚语
 Bulgarian §保加利亚语
 Catalan §加泰罗尼亚语
 Cebuano § 宿务语
-Chinese (Simplified) §简体中文
-Chinese (Traditional) §繁体中文
+Chinese (Simplified) §简中
+Chinese (Traditional) §繁中
 Corsican §科西嘉岛语
 Croatian §克罗地亚语
 Czech §捷克语
@@ -796,7 +795,11 @@ Yoruba §约鲁巴语
 Zulu §祖鲁语
 Team chat §团队聊天
 All chat §所有聊天
-Forcing player into vehicle. This can take up to 15 seconds. §强制玩家进入载具. 最多可能需要15秒.
+Forcing player into vehicle. This can take up to 15 seconds. §强制玩家进入载具中...最多可能需要15秒.
 Failed to teleport player. §传送玩家失败.
 Translate your messages into §翻译你的聊天信息
-Your messages chat type §你的聊天信息类型
+Your messages chat type §你的信息聊天类型
+Obtaining update information... §获取更新信息中...
+There's a new update for Kek's menu available. Press enter to install it, space to not. §Kek菜单有新的更新. 按 回车 安装或 空格 取消.
+This message will disappear in 25 seconds and will assume you don't want the update. §此信息将在25秒后消失,并假设你不想更新.
+Check for updates §自动检查更新
