--- a/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
+++ b/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
@@ -282,11 +282,11 @@ Vehicles §载具
 Peds §NPC
 Objects §物体
 Pickups §可拾取物
-Peds & vehicles §NPC & 载具
+Peds & vehicles §NPC &载具
 All §所有
 Cops §警察
-Kill player § 击杀玩家
-Send clown van § 发送攻击小丑
+Kill player §击杀玩家
+Send clown van §发送攻击小丑
 Kick from session §踢出战局
 Crash §崩溃
 Random §随机
@@ -666,7 +666,7 @@ You have the latest version of Kek's menu. §当前为最新版本的Kek菜单.
 Update successfully installed. §更新已安装成功.
 Update failed. No files are changed. §更新失败了. 没有文件被更改.
 Failed to check what the latest version of the script is. §检查脚本的最新版本失败.
-files downloaded §文件已下载.
+files downloaded §个文件已下载.
 Turn off debug mode to use auto-updater. §关闭 调试模式 以使用自动更新.
 Press space to remove this message. §按 空格 移除此信息.
 Show latest update changelog §显示最新的更新日志
@@ -674,8 +674,6 @@ Participate in betas §参与测试
 Translate into §翻译成
 Translate chat §翻译聊天
 Translation §翻译
-Translate what is not §不翻译
-Translate your messages §翻译你的聊天信息
 Afrikaans §南非荷兰语
 Albanian §阿尔巴尼亚语
 Amharic §阿姆哈拉语
@@ -688,7 +686,7 @@ Bengali §孟加拉语
 Bosnian §波斯尼亚语
 Bulgarian §保加利亚语
 Catalan §加泰罗尼亚语
-Cebuano § 宿务语
+Cebuano §宿务语
 Chinese (Simplified) §简中
 Chinese (Traditional) §繁中
 Corsican §科西嘉岛语
@@ -709,10 +707,10 @@ Greek §希腊语
 Gujarati §古吉拉特语
 Haitian Creole §海地克里奥尔语
 Hausa §豪萨语
-Hawaiian § 夏威夷语
+Hawaiian §夏威夷语
 Hebrew §希伯来语
 Hindi §印地语
-Hmong § 苗族语
+Hmong §苗族语
 Hungarian §匈牙利语
 Icelandic §冰岛语
 Igbo §伊博语
@@ -785,12 +783,9 @@ Xhosa §科萨语
 Yiddish §意第绪语
 Yoruba §约鲁巴语
 Zulu §祖鲁语
-Team chat §团队聊天
-All chat §所有聊天
 Forcing player into vehicle. This can take up to 15 seconds. §强制玩家进入载具中...最多可能需要15秒.
 Failed to teleport player. §传送玩家失败.
 Translate your messages into §翻译你的聊天信息
-Your messages chat type §你的信息聊天类型
 Obtaining update information... §获取更新信息中...
 There's a new update for Kek's menu available. Press enter to install it, space to not. §Kek菜单有新的更新. 按 回车 安装或 空格 取消.
 This message will disappear in 25 seconds and will assume you don't want the update. §此信息将在25秒后消失,并假设你不想更新.
@@ -805,3 +800,9 @@ The map/vehicle can be networked if you clear all entities. Currently there are 
 Where to send translations §发送翻译到
 To chat §聊天
 Notification §通知
+Languages to not translate §不翻译的语言
+Type in what to translate. §输入要翻译的内容.
+Translate input §翻译输入
+Send to team chat §发送到团队聊天
+Send to all chat §发送到所有聊天
+Tip: set hotkeys for the translate inputs below §提示: 为下面的翻译输入设置快捷键
