--- a/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
+++ b/kek_menu_stuff/kekMenuLibs/Languages/Chinese.txt
@@ -821,3 +821,5 @@ Type in number of notifications to display. §输入要显示的通知数量.
 24-hour clock §24 小时制
 12-hour clock §12 小时制
 They were spoofing as §他正在伪装为
+The green line is where it will align itself to if there's enough space. §如果有足够的屏幕空间,绿线就是对齐的位置.
+The text is auto aligned to never be off-screen. §文字是自动对齐的,永远不会超过屏幕.
